[ITB-2109] Support proxy settings for test engine (gitb-srv) originated network traffic